<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:padding="10dp">

   <!-- Number Pickers -->
  <LinearLayout
      android:orientation="horizontal"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:layout_gravity="center">

	<com.TrackApp.NumberPicker
		android:id="@+id/FrontRing1"
		android:layout_width="60dp"
		android:layout_height="wrap_content" >
	</com.TrackApp.NumberPicker>
	
	<TextView
	    android:text="@string/X"
	    android:layout_gravity="center"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    >
	</TextView>
	
	<com.TrackApp.NumberPicker
	    android:id="@+id/RearCog1"
		android:layout_width="60dp"
		android:layout_height="wrap_content">
	</com.TrackApp.NumberPicker>
	
	<TextView
	    android:padding="10dp"
	    android:text="@string/vs"
	    android:layout_gravity="center"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"/>
	    
	<com.TrackApp.NumberPicker
		android:id="@+id/FrontRing2"
		android:layout_width="60dp"
		android:layout_height="wrap_content" >
	</com.TrackApp.NumberPicker>
	
	<TextView
	    android:text="@string/X"
	    android:layout_gravity="center"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    >
	</TextView>
	
	<com.TrackApp.NumberPicker
	    android:id="@+id/RearCog2"
		android:layout_width="60dp"
		android:layout_height="wrap_content" >
	</com.TrackApp.NumberPicker>
	
  </LinearLayout>
        
  <!-- Gear Inch Views -->
  <LinearLayout
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_weight="1">
    <TextView
        android:id="@+id/GearInchOneLabel"
        android:text="@string/GearInchLabel"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"/>
    <TextView
        android:id="@+id/GearInchOne"
        android:text="@string/Gear_Inch_Default"
        android:layout_width="20dp"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_weight="1.5"/>
    <TextView
        android:id="@+id/GearInchTwoLabel"
        android:text="@string/GearInchLabel"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:paddingLeft="10dp"
        android:layout_gravity="right"/>
    <TextView
        android:id="@+id/GearInchTwo"
        android:text="@string/Gear_Inch_Default"
        android:paddingLeft="5dp"
        android:layout_width="20dp"
        android:layout_height="wrap_content"
        android:layout_weight="1.5"
        android:layout_gravity="right"/>
    
    
  </LinearLayout>

  <!-- Rollout TexViews -->
  <LinearLayout
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_weight="1">
    <TextView
        android:id="@+id/RolloutoneLabel"
        android:text="@string/Rollout_Label"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"/>
    <TextView
        android:id="@+id/Rollout_one"
        android:text="@string/rollout_distance"
        android:layout_width="20dp"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_weight="1.5"/>
    <TextView
        android:id="@+id/RolloutTwoLabel"
        android:text="@string/Rollout_Label"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:paddingLeft="10dp"
        android:layout_gravity="right"/>
    <TextView
        android:id="@+id/Rollout_two"
        android:text="@string/rollout_distance"
        android:paddingLeft="5dp"
        android:layout_width="20dp"
        android:layout_height="wrap_content"
        android:layout_weight="1.5"
        android:layout_gravity="right"/>
  </LinearLayout>
  
  <!-- Cadence TextView -->
  <LinearLayout
    android:orientation="horizontal"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:padding="5dp">
	<TextView
		android:id="@+id/Cadencelabel"
	    android:text="@string/CadenceLabel"
	    android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:paddingRight="5dp"
    	android:layout_gravity="right"/>
	<TextView android:id="@+id/Cadence" 
		android:text="@string/Cadence_Default"
		android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:layout_gravity=""/> 
  </LinearLayout>
  
  <!-- Cadence Bar -->
  <LinearLayout
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_weight="1">
	<SeekBar android:layout_width="fill_parent" 
		android:id="@+id/GCCadenceBar" 
		android:layout_height="wrap_content" 
		android:padding="5dp"/>
  </LinearLayout>

  <!-- speed label -->
  <LinearLayout
      android:orientation="horizontal"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:layout_weight="1">
	<LinearLayout
	    android:orientation="horizontal"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_gravity="left"
	    android:layout_weight="1">
	    
	    <TextView
	        android:id="@+id/Speed_Label_1"
	        android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
	        android:text="@string/Speed_text_Label" />

	    <TextView
	        android:id="@+id/Speed_1"
	        android:paddingLeft="5dp"
	        android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
	        android:text="@string/Speed_default" />

		<TextView
		    android:id="@+id/KPH_Units_1"
		    android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:paddingLeft="5dp"
		    android:text="@string/KPH_units" />
	</LinearLayout>
    <LinearLayout
	    android:orientation="horizontal"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_gravity="right"
	    android:layout_weight="1">
		
		<TextView
	        android:id="@+id/Speed_Label_2"
	        android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
	        android:text="@string/Speed_text_Label" />

	    <TextView
	        android:id="@+id/Speed_2"
	        android:paddingLeft="5dp"
	        android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
	        android:text="@string/Speed_default" />

		<TextView
		    android:id="@+id/KPH_Units_2"
		    android:paddingLeft="5dp"
		    android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
		    android:text="@string/KPH_units" />
		</LinearLayout>
  </LinearLayout>

</LinearLayout>