<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingLeft="10px" 
    android:paddingRight="10px">

    <TableRow android:padding="10px"/>
	<TableRow android:gravity="center">
		<com.TrackApp.NumberPicker
		    android:id="@+id/FrontRing"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content" >
		</com.TrackApp.NumberPicker>
		<TextView
		    android:text="@string/X">
		</TextView>
		<com.TrackApp.NumberPicker
		    android:id="@+id/RearCog"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content" >
		</com.TrackApp.NumberPicker>
	    
	</TableRow>
	<TableRow>
	    <TextView
	        android:id="@+id/GearInchlabel"
	        android:text="@string/GearInchLabel">
	    </TextView>
	    <TextView
		    android:id="@+id/Gear_Inch"
		    android:text="@string/Gear_Inch_Default"/>
	</TableRow>
		

		<SeekBar
		    android:id="@+id/CadenceBar"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:layout_margin="10px" 
		    android:layout_gravity="center"/>

         
</TableLayout>